# hera

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
assets/: CMakeLists.txt
assets/data/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/icons/: CMakeLists.txt  icon.icns
assets/renderdata/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  lamp.frag  lamp.vert  scene.vert  text.frag  text.vert
cmake/: ProjectUtility.cmake
config/: CMakeLists.txt  hera.toml.in
hera/: CMakeLists.txt  assets.hpp  common.hpp  config.cpp  config.hpp  error.cpp  error.hpp  event.hpp  format.hpp  image.cpp  image.hpp  init.hpp  input.cpp  input.hpp  link.cpp  link.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  lua.cpp  lua.hpp  main.cpp  state.cpp  state.hpp  tick.cpp  tick.hpp  toml.cpp  toml.hpp  ui.cpp  ui.hpp  utility.cpp  utility.hpp  window.cpp  window.hpp
hera.xcodeproj/: project.pbxproj
hera/gl/: buffer.hpp  common.hpp  detail.hpp  gl.cpp  object.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  vertex.hpp
hera/io/: assets.hpp  image.cpp  image.hpp  link.cpp  link.hpp  router.cpp  router.hpp  toml.cpp
hera/render/: assimp_util.hpp  camera.cpp  camera.hpp  cube.cpp  cube.hpp  geometry.cpp  geometry.hpp  imgui_config.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  text.cpp  text.hpp  ui.cpp  ui.hpp
scripts/: add_copyright.py
shaders/: CMakeLists.txt  common.glsl  scene.frag
tools/: MacOSXBundleInfo.plist.in  add_copyright.py  del_ds_store.sh
